# TurkishFrameNet-C

./: CMakeLists.txt  conanfile.py
Test/: FrameElementTest.c  FrameNetTest.c
src/: CMakeLists.txt  Frame.c  Frame.h  FrameElement.c  FrameElement.h  FrameElementList.c  FrameElementList.h  FrameNet.c  FrameNet.h
